--- a/Ecommerce/Views/Admin/Create.cshtml
+++ b/Ecommerce/Views/Admin/Create.cshtml
@@ -49,7 +49,6 @@
     <div id="box" class="img-responsive">
         @using (Html.BeginForm("Create", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
-            {
         <div class="insidebox">
             <div> <h1>Add Category</h1></div>
 
@@ -86,7 +85,7 @@
 
             <div class="form-group">
 
-                <input type="submit" value="Login" class="btn btn-success btn-block" />
+                <input type="submit" value="Create" class="btn btn-success btn-block" />
 
             </div>
 
