--- a/Ecommerce/Views/User/Ads.cshtml
+++ b/Ecommerce/Views/User/Ads.cshtml
@@ -10,12 +10,12 @@
 
 <style>
     .cimg {
-        -webkit-transform 5s;
+        -webkit-transform: 5s;
         transition: transform 5s;
     }
 
         .cimg:hover {
-            -webkit-transform: rotatez(360deg);
+            -webkit-transform: rotate(360deg);
         }
 </style>
 
@@ -76,7 +76,7 @@
                             <div class="col-lg-4 col-md-4" style="height:200px;margin-top:100px">
 
                                 <img class="img img-responsive cimg" src="@Url.Content(item.pro_image)" style=" height:100%;width:100% ;border-radius:50px 50px 50px 50px" />
-                                <h4 style="color:#808080; font-family:'Arial Rounded MT';text-align:center"> @Html.ActionLink(@item.pro_name, "ViewAd", new { id = @item.pro_uid })</h4>
+                                <h4 style="color:#808080; font-family:'Arial Rounded MT';text-align:center"> @Html.ActionLink(@item.pro_name, "Viewad", new { id = @item.pro_id })</h4>
 
                             </div>
 
