--- a/Ecommerce/Views/User/Singup.cshtml
+++ b/Ecommerce/Views/User/Singup.cshtml
@@ -2,11 +2,9 @@
 @model Ecommerce.Models.tbl_user
 
 @{
-    ViewBag.Title = "Singup";
+    ViewBag.Title = "Signup";
     Layout = null;
 }
-
-
 
 <style>
     #box {
@@ -53,89 +51,89 @@
     <div id="box" class="img-responsive">
         @using (Html.BeginForm("Singup", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
-        <div class="insidebox">
-            <div> <h1>Sing Up</h1></div>
+            <div class="insidebox">
+                <div> <h1>Sing Up</h1></div>
 
 
 
 
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
-                    @Html.TextBoxFor(x => x.u_name, new { @class = "form-control", @placeholder = "Username" })
-                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                        @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+                        @Html.TextBoxFor(x => x.u_name, new { @class = "form-control", @placeholder = "Username" })
+                    </div>
 
-                <span style="color:red">   @Html.ValidationMessageFor(x => x.u_name) </span>
-
-            </div>
-
-
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
-                    @Html.TextBoxFor(x => x.u_email, new { @class = "form-control", @placeholder = "Useremail" })
-                </div>
-
-                <span style="color:red">   @Html.ValidationMessageFor(x => x.u_email) </span>
-
-            </div>
-
-
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
-                    @Html.PasswordFor(x => x.u_password, new { @class = "form-control", @placeholder = "Userpassword" })
-                </div>
-
-                <span style="color:red">   @Html.ValidationMessageFor(x => x.u_password) </span>
-
-            </div>
-
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-                    @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
-                    @Html.TextBoxFor(x => x.u_contact, new { @class = "form-control", @placeholder = "Usercontact" })
-                </div>
-
-                <span style="color:red">   @Html.ValidationMessageFor(x => x.u_contact) </span>
-
-            </div>
-
-
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-
-                    <p class="contact"><label for="name">Image</label></p>
-                    <input type="file" name="imgfile" id="imgfile" class="form-control" required="required" />
+                    <span style="color:red">   @Html.ValidationMessageFor(x => x.u_name) </span>
 
                 </div>
 
 
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                        @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+                        @Html.TextBoxFor(x => x.u_email, new { @class = "form-control", @placeholder = "Useremail" })
+                    </div>
+
+                    <span style="color:red">   @Html.ValidationMessageFor(x => x.u_email) </span>
+
+                </div>
+
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                        @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+                        @Html.PasswordFor(x => x.u_password, new { @class = "form-control", @placeholder = "Userpassword" })
+                    </div>
+
+                    <span style="color:red">   @Html.ValidationMessageFor(x => x.u_password) </span>
+
+                </div>
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+                        @*<asp:TextBox ID="TextBox1" runat="server" class="form-control" placeholder="Username" required="required"></asp:TextBox>*@
+                        @Html.TextBoxFor(x => x.u_contact, new { @class = "form-control", @placeholder = "Usercontact" })
+                    </div>
+
+                    <span style="color:red">   @Html.ValidationMessageFor(x => x.u_contact) </span>
+
+                </div>
+
+
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
+
+                        <p class="contact"><label for="name">Image</label></p>
+                        <input type="file" name="imgfile" id="imgfile" class="form-control" required="required" />
+
+                    </div>
+
+
+
+                </div>
+
+
+
+
+
+                <div class="form-group">
+
+                    <input type="submit" value="Singup" class="btn btn-success btn-block" />
+
+                </div>
+
+                <div class="form-group">
+                    <p style="color:red">@ViewBag.error</p>
+                </div>
+
+
 
             </div>
-
-
-
-
-
-            <div class="form-group">
-
-                <input type="submit" value="Singup" class="btn btn-success btn-block" />
-
-            </div>
-
-            <div class="form-group">
-                <p style="color:red">@ViewBag.error</p>
-            </div>
-
-
-
-        </div>
 
         }
     </div>
